# contests

./: .gitignore  README.md
Codeforces/: test.cpp
icpc/2024nena/: CMakeLists.txt  temp.cpp
icpc/2024nena/a/: a  a.cpp
icpc/2024nena/b/: b  b.cpp  b2.cpp
icpc/2024nena/c/: c  c.cpp  input1  input2
icpc/2024nena/d/: d  d.cpp  input1  input2
icpc/2024nena/f/: f  f.cpp
icpc/2024nena/g/: g  g.cpp
icpc/2024nena/h/: h  h.cpp
icpc/2024nena/i/: i  i.cpp
icpc/2024nena/j/: input1  input2  input3  j  j.cpp
icpc/2024nena/l/: input1  input2  l  l.cpp
icpc/2024nena/m/: input1  input2  m  m.cpp
icpc/2024rmc/: CMakeLists.txt
icpc/2024rmc/a/: a  a.cpp
icpc/2024rmc/b/: a.out  b  b.cpp
icpc/2024rmc/c/: c  c.cpp
icpc/2024rmc/d/: d  d.cpp
icpc/2024rmc/e/: e  e.cpp  input1  input2  input3  input4
icpc/2024rmc/f/: f  f.cpp  input1  input2  input3
icpc/2024rmc/g/: g  g.cpp
icpc/2024rmc/h/: h  h.cpp  input3
icpc/2024rmc/i/: i  i.cpp  i.py
icpc/2024rmc/j/: j  j.cpp
icpc/2024rmc/k/: k  k.cpp
icpc/2024rmc/l/: l  l.cpp
icpc/2024rmc/m/: m.cpp
icpc/2024socal/: CMakeLists.txt  temp.cpp
icpc/2024socal/1/: 1.cpp  a.out
icpc/2024socal/10/: 10.cpp  a.out
icpc/2024socal/11/: 11.cpp  a.out
icpc/2024socal/12/: 12.cpp  a.out
icpc/2024socal/2/: 2.cpp  a.out
icpc/2024socal/3/: 3.cpp  a.out
icpc/2024socal/4/: 2.in  4.cpp  4_rewrite.cpp  a.out
icpc/2024socal/5/: 1.in  5.cpp
icpc/2024socal/6/: 4.in  6.cpp  a.out
icpc/2024socal/7/: 7.cpp  a.out
icpc/2024socal/8/: 8.cpp
icpc/2024socal/9/: 9.cpp  a.out
lc/: 1886.cpp  1887.cpp  1925.cpp  (+7 more)
(+2254 files in other folders)
