cmake_minimum_required(VERSION 3.29)
project(Downloads)

set(CMAKE_CXX_STANDARD 17)

add_executable(Downloads main.cpp
        temp.cpp
        1/1.cpp
        10/10.cpp
        11/11.cpp
        9/9.cpp
        6/6.cpp
        4/4.cpp
        2/2.cpp
        12/12.cpp
        7/7.cpp
        5/5.cpp
        3/3.cpp)
